// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu Menu.Item render with active props 1`] = `
<DocumentFragment>
  .cache-j37q6h-Container {
  border-bottom: 1px solid #d9dadd;
  padding: 2px 4px;
}

.cache-fun4gd-StyledItem {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 32px;
  max-height: 44px;
  font-size: 14px;
  line-height: 20px;
  font-weight: inherit;
  padding: 4px 8px;
  border: none;
  cursor: pointer;
  min-width: 110px;
  width: 100%;
  border-radius: 4px;
  -webkit-transition: background-color 200ms,color 200ms;
  transition: background-color 200ms,color 200ms;
  color: #3f4250;
  background: none;
}

.cache-fun4gd-StyledItem svg {
  fill: #3f4250;
}

.cache-fun4gd-StyledItem:hover,
.cache-fun4gd-StyledItem:focus,
.cache-fun4gd-StyledItem[data-active='true'] {
  background-color: #e9eaeb;
  color: #222638;
}

.cache-fun4gd-StyledItem:hover svg,
.cache-fun4gd-StyledItem:focus svg,
.cache-fun4gd-StyledItem[data-active='true'] svg {
  fill: #222638;
}

<div
    class="cache-j37q6h-Container ei26g5y2"
  >
    <button
      class="cache-fun4gd-StyledItem ei26g5y1"
      data-active="true"
      role="menuitem"
      type="button"
    >
      Borderless Props
    </button>
  </div>
</DocumentFragment>
`;

exports[`Menu Menu.Item render with borderless props 1`] = `
<DocumentFragment>
  .cache-giamzg-Container {
  padding: 2px 4px;
}

.cache-fun4gd-StyledItem {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 32px;
  max-height: 44px;
  font-size: 14px;
  line-height: 20px;
  font-weight: inherit;
  padding: 4px 8px;
  border: none;
  cursor: pointer;
  min-width: 110px;
  width: 100%;
  border-radius: 4px;
  -webkit-transition: background-color 200ms,color 200ms;
  transition: background-color 200ms,color 200ms;
  color: #3f4250;
  background: none;
}

.cache-fun4gd-StyledItem svg {
  fill: #3f4250;
}

.cache-fun4gd-StyledItem:hover,
.cache-fun4gd-StyledItem:focus,
.cache-fun4gd-StyledItem[data-active='true'] {
  background-color: #e9eaeb;
  color: #222638;
}

.cache-fun4gd-StyledItem:hover svg,
.cache-fun4gd-StyledItem:focus svg,
.cache-fun4gd-StyledItem[data-active='true'] svg {
  fill: #222638;
}

<div
    class="cache-giamzg-Container ei26g5y2"
  >
    <button
      class="cache-fun4gd-StyledItem ei26g5y1"
      role="menuitem"
      type="button"
    >
      Borderless Props
    </button>
  </div>
</DocumentFragment>
`;

exports[`Menu Menu.Item render with default props 1`] = `
<DocumentFragment>
  .cache-j37q6h-Container {
  border-bottom: 1px solid #d9dadd;
  padding: 2px 4px;
}

.cache-fun4gd-StyledItem {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 32px;
  max-height: 44px;
  font-size: 14px;
  line-height: 20px;
  font-weight: inherit;
  padding: 4px 8px;
  border: none;
  cursor: pointer;
  min-width: 110px;
  width: 100%;
  border-radius: 4px;
  -webkit-transition: background-color 200ms,color 200ms;
  transition: background-color 200ms,color 200ms;
  color: #3f4250;
  background: none;
}

.cache-fun4gd-StyledItem svg {
  fill: #3f4250;
}

.cache-fun4gd-StyledItem:hover,
.cache-fun4gd-StyledItem:focus,
.cache-fun4gd-StyledItem[data-active='true'] {
  background-color: #e9eaeb;
  color: #222638;
}

.cache-fun4gd-StyledItem:hover svg,
.cache-fun4gd-StyledItem:focus svg,
.cache-fun4gd-StyledItem[data-active='true'] svg {
  fill: #222638;
}

<div
    class="cache-j37q6h-Container ei26g5y2"
  >
    <button
      class="cache-fun4gd-StyledItem ei26g5y1"
      role="menuitem"
      type="button"
    >
      Default Props
    </button>
  </div>
</DocumentFragment>
`;

exports[`Menu Menu.Item render with disabled props 1`] = `
<DocumentFragment>
  .cache-j37q6h-Container {
  border-bottom: 1px solid #d9dadd;
  padding: 2px 4px;
}

.cache-5e0w5r-StyledItem {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 32px;
  max-height: 44px;
  font-size: 14px;
  line-height: 20px;
  font-weight: inherit;
  padding: 4px 8px;
  border: none;
  cursor: pointer;
  min-width: 110px;
  width: 100%;
  border-radius: 4px;
  -webkit-transition: background-color 200ms,color 200ms;
  transition: background-color 200ms,color 200ms;
  color: #b5b7bd;
  cursor: not-allowed;
  background: none;
}

.cache-5e0w5r-StyledItem svg {
  fill: #b5b7bd;
}

<div
    class="cache-j37q6h-Container ei26g5y2"
  >
    <button
      class="cache-5e0w5r-StyledItem ei26g5y1"
      disabled=""
      role="menuitem"
      type="button"
    >
      Disabled Props
    </button>
  </div>
</DocumentFragment>
`;

exports[`Menu Menu.Item render with sentiment danger 1`] = `
<DocumentFragment>
  .cache-j37q6h-Container {
  border-bottom: 1px solid #d9dadd;
  padding: 2px 4px;
}

.cache-astahl-StyledItem {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 32px;
  max-height: 44px;
  font-size: 14px;
  line-height: 20px;
  font-weight: inherit;
  padding: 4px 8px;
  border: none;
  cursor: pointer;
  min-width: 110px;
  width: 100%;
  border-radius: 4px;
  -webkit-transition: background-color 200ms,color 200ms;
  transition: background-color 200ms,color 200ms;
  color: #b3144d;
  background: none;
}

.cache-astahl-StyledItem svg {
  fill: #b3144d;
}

.cache-astahl-StyledItem:hover,
.cache-astahl-StyledItem:focus,
.cache-astahl-StyledItem[data-active='true'] {
  background-color: #ffd3e3;
  color: #92103f;
}

.cache-astahl-StyledItem:hover svg,
.cache-astahl-StyledItem:focus svg,
.cache-astahl-StyledItem[data-active='true'] svg {
  fill: #92103f;
}

<div
    class="cache-j37q6h-Container ei26g5y2"
  >
    <button
      class="cache-astahl-StyledItem ei26g5y1"
      role="menuitem"
      type="button"
    >
      Danger
    </button>
  </div>
</DocumentFragment>
`;

exports[`Menu placement renders bottom 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  0% {
    opacity: 0;
    -webkit-transform: translate3d(0px, 12px, 0);
    -moz-transform: translate3d(0px, 12px, 0);
    -ms-transform: translate3d(0px, 12px, 0);
    transform: translate3d(0px, 12px, 0);
  }

  100% {
    opacity: 1;
    -webkit-transform: translate3d(0px, 12px, 0);
    -moz-transform: translate3d(0px, 12px, 0);
    -ms-transform: translate3d(0px, 12px, 0);
    transform: translate3d(0px, 12px, 0);
  }
}

.cache-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.cache-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

.cache-5k2du2-StyledPopup-StyledPopup-StyledPopup {
  background: #151a2d;
  color: #ffffff;
  border-radius: 4px;
  padding: 4px 8px;
  text-align: center;
  position: absolute;
  max-width: 232px;
  overflow-wrap: break-word;
  font-size: 0.8rem;
  inset: 0 auto auto 0;
  top: 0;
  left: 0;
  z-index: 1;
  -webkit-transform: translate3d(0px, 12px, 0);
  -moz-transform: translate3d(0px, 12px, 0);
  -ms-transform: translate3d(0px, 12px, 0);
  transform: translate3d(0px, 12px, 0);
  -webkit-animation: 230ms animation-0 forwards;
  animation: 230ms animation-0 forwards;
  background-color: #ffffff;
  box-shadow: 0px 0px 24px 6px #d9dadd66;
  padding: 0;
  width: 180px;
  max-width: none;
  padding: 2px 0;
}

.cache-5k2du2-StyledPopup-StyledPopup-StyledPopup[data-has-arrow='true']::after {
  content: ' ';
  position: absolute;
  top: -13px;
  left: 0px;
  -webkit-transform: rotate(180deg);
  -moz-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  margin-left: -8px;
  border-width: 8px;
  border-style: solid;
  border-color: #151a2d transparent transparent transparent;
  pointer-events: none;
}

.cache-5k2du2-StyledPopup-StyledPopup-StyledPopup[data-has-arrow='true']::after {
  border-color: #ffffff transparent transparent transparent;
}

.cache-13aqjby-Stack-MenuList {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  max-height: 480px;
  overflow-y: auto;
  overflow-x: hidden;
  background-color: #ffffff;
  color: #3f4250;
  border-radius: 4px;
  position: relative;
}

.cache-13aqjby-Stack-MenuList:after,
.cache-13aqjby-Stack-MenuList:before {
  border: solid transparent;
  border-width: 9px;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.cache-13aqjby-Stack-MenuList:after {
  border-color: transparent;
}

.cache-13aqjby-Stack-MenuList:before {
  border-color: transparent;
}

.cache-j37q6h-Container {
  border-bottom: 1px solid #d9dadd;
  padding: 2px 4px;
}

.cache-fun4gd-StyledItem {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 32px;
  max-height: 44px;
  font-size: 14px;
  line-height: 20px;
  font-weight: inherit;
  padding: 4px 8px;
  border: none;
  cursor: pointer;
  min-width: 110px;
  width: 100%;
  border-radius: 4px;
  -webkit-transition: background-color 200ms,color 200ms;
  transition: background-color 200ms,color 200ms;
  color: #3f4250;
  background: none;
}

.cache-fun4gd-StyledItem svg {
  fill: #3f4250;
}

.cache-fun4gd-StyledItem:hover,
.cache-fun4gd-StyledItem:focus,
.cache-fun4gd-StyledItem[data-active='true'] {
  background-color: #e9eaeb;
  color: #222638;
}

.cache-fun4gd-StyledItem:hover svg,
.cache-fun4gd-StyledItem:focus svg,
.cache-fun4gd-StyledItem[data-active='true'] svg {
  fill: #222638;
}

<div
    aria-controls="menu-:rr:"
    aria-describedby="menu-:rr:"
    class="cache-1hzk1lh-StyledChildrenContainer e4h1g860"
    tabindex="-1"
  >
    <button
      aria-expanded="true"
      aria-haspopup="dialog"
      type="button"
    >
      Menu
    </button>
    <div
      class="e1jn11gg1 cache-5k2du2-StyledPopup-StyledPopup-StyledPopup e4h1g861"
      data-has-arrow="false"
      id="menu-:rr:"
      role="dialog"
    >
      <div
        class="cache-13aqjby-Stack-MenuList e1jn11gg0"
        role="menu"
      >
        <div
          class="cache-j37q6h-Container ei26g5y2"
        >
          <button
            class="cache-fun4gd-StyledItem ei26g5y1"
            role="menuitem"
            type="button"
          >
            bottom
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu placement renders left 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  0% {
    opacity: 0;
    -webkit-transform: translate3d(-16px, 0px, 0);
    -moz-transform: translate3d(-16px, 0px, 0);
    -ms-transform: translate3d(-16px, 0px, 0);
    transform: translate3d(-16px, 0px, 0);
  }

  100% {
    opacity: 1;
    -webkit-transform: translate3d(-16px, 0px, 0);
    -moz-transform: translate3d(-16px, 0px, 0);
    -ms-transform: translate3d(-16px, 0px, 0);
    transform: translate3d(-16px, 0px, 0);
  }
}

.cache-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.cache-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

.cache-1rwii1t-StyledPopup-StyledPopup-StyledPopup {
  background: #151a2d;
  color: #ffffff;
  border-radius: 4px;
  padding: 4px 8px;
  text-align: center;
  position: absolute;
  max-width: 232px;
  overflow-wrap: break-word;
  font-size: 0.8rem;
  inset: 0 auto auto 0;
  top: 0;
  left: 0;
  z-index: 1;
  -webkit-transform: translate3d(-16px, 0px, 0);
  -moz-transform: translate3d(-16px, 0px, 0);
  -ms-transform: translate3d(-16px, 0px, 0);
  transform: translate3d(-16px, 0px, 0);
  -webkit-animation: 230ms animation-0 forwards;
  animation: 230ms animation-0 forwards;
  background-color: #ffffff;
  box-shadow: 0px 0px 24px 6px #d9dadd66;
  padding: 0;
  width: 180px;
  max-width: none;
  padding: 2px 0;
}

.cache-1rwii1t-StyledPopup-StyledPopup-StyledPopup[data-has-arrow='true']::after {
  content: ' ';
  position: absolute;
  top: 0px;
  left: 13px;
  -webkit-transform: translate(-50%, -50%) rotate(-90deg);
  -moz-transform: translate(-50%, -50%) rotate(-90deg);
  -ms-transform: translate(-50%, -50%) rotate(-90deg);
  transform: translate(-50%, -50%) rotate(-90deg);
  margin-left: -8px;
  border-width: 8px;
  border-style: solid;
  border-color: #151a2d transparent transparent transparent;
  pointer-events: none;
}

.cache-1rwii1t-StyledPopup-StyledPopup-StyledPopup[data-has-arrow='true']::after {
  border-color: #ffffff transparent transparent transparent;
}

.cache-13aqjby-Stack-MenuList {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  max-height: 480px;
  overflow-y: auto;
  overflow-x: hidden;
  background-color: #ffffff;
  color: #3f4250;
  border-radius: 4px;
  position: relative;
}

.cache-13aqjby-Stack-MenuList:after,
.cache-13aqjby-Stack-MenuList:before {
  border: solid transparent;
  border-width: 9px;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.cache-13aqjby-Stack-MenuList:after {
  border-color: transparent;
}

.cache-13aqjby-Stack-MenuList:before {
  border-color: transparent;
}

.cache-j37q6h-Container {
  border-bottom: 1px solid #d9dadd;
  padding: 2px 4px;
}

.cache-fun4gd-StyledItem {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 32px;
  max-height: 44px;
  font-size: 14px;
  line-height: 20px;
  font-weight: inherit;
  padding: 4px 8px;
  border: none;
  cursor: pointer;
  min-width: 110px;
  width: 100%;
  border-radius: 4px;
  -webkit-transition: background-color 200ms,color 200ms;
  transition: background-color 200ms,color 200ms;
  color: #3f4250;
  background: none;
}

.cache-fun4gd-StyledItem svg {
  fill: #3f4250;
}

.cache-fun4gd-StyledItem:hover,
.cache-fun4gd-StyledItem:focus,
.cache-fun4gd-StyledItem[data-active='true'] {
  background-color: #e9eaeb;
  color: #222638;
}

.cache-fun4gd-StyledItem:hover svg,
.cache-fun4gd-StyledItem:focus svg,
.cache-fun4gd-StyledItem[data-active='true'] svg {
  fill: #222638;
}

<div
    aria-controls="menu-:ru:"
    aria-describedby="menu-:ru:"
    class="cache-1hzk1lh-StyledChildrenContainer e4h1g860"
    tabindex="-1"
  >
    <button
      aria-expanded="true"
      aria-haspopup="dialog"
      type="button"
    >
      Menu
    </button>
    <div
      class="e1jn11gg1 cache-1rwii1t-StyledPopup-StyledPopup-StyledPopup e4h1g861"
      data-has-arrow="false"
      id="menu-:ru:"
      role="dialog"
    >
      <div
        class="cache-13aqjby-Stack-MenuList e1jn11gg0"
        role="menu"
      >
        <div
          class="cache-j37q6h-Container ei26g5y2"
        >
          <button
            class="cache-fun4gd-StyledItem ei26g5y1"
            role="menuitem"
            type="button"
          >
            left
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu placement renders right 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  0% {
    opacity: 0;
    -webkit-transform: translate3d(16px, 0px, 0);
    -moz-transform: translate3d(16px, 0px, 0);
    -ms-transform: translate3d(16px, 0px, 0);
    transform: translate3d(16px, 0px, 0);
  }

  100% {
    opacity: 1;
    -webkit-transform: translate3d(16px, 0px, 0);
    -moz-transform: translate3d(16px, 0px, 0);
    -ms-transform: translate3d(16px, 0px, 0);
    transform: translate3d(16px, 0px, 0);
  }
}

.cache-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.cache-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

.cache-1ffg5rq-StyledPopup-StyledPopup-StyledPopup {
  background: #151a2d;
  color: #ffffff;
  border-radius: 4px;
  padding: 4px 8px;
  text-align: center;
  position: absolute;
  max-width: 232px;
  overflow-wrap: break-word;
  font-size: 0.8rem;
  inset: 0 auto auto 0;
  top: 0;
  left: 0;
  z-index: 1;
  -webkit-transform: translate3d(16px, 0px, 0);
  -moz-transform: translate3d(16px, 0px, 0);
  -ms-transform: translate3d(16px, 0px, 0);
  transform: translate3d(16px, 0px, 0);
  -webkit-animation: 230ms animation-0 forwards;
  animation: 230ms animation-0 forwards;
  background-color: #ffffff;
  box-shadow: 0px 0px 24px 6px #d9dadd66;
  padding: 0;
  width: 180px;
  max-width: none;
  padding: 2px 0;
}

.cache-1ffg5rq-StyledPopup-StyledPopup-StyledPopup[data-has-arrow='true']::after {
  content: ' ';
  position: absolute;
  top: 0px;
  left: -13px;
  -webkit-transform: translate(50%, -50%) rotate(90deg);
  -moz-transform: translate(50%, -50%) rotate(90deg);
  -ms-transform: translate(50%, -50%) rotate(90deg);
  transform: translate(50%, -50%) rotate(90deg);
  margin-left: -8px;
  border-width: 8px;
  border-style: solid;
  border-color: #151a2d transparent transparent transparent;
  pointer-events: none;
}

.cache-1ffg5rq-StyledPopup-StyledPopup-StyledPopup[data-has-arrow='true']::after {
  border-color: #ffffff transparent transparent transparent;
}

.cache-13aqjby-Stack-MenuList {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  max-height: 480px;
  overflow-y: auto;
  overflow-x: hidden;
  background-color: #ffffff;
  color: #3f4250;
  border-radius: 4px;
  position: relative;
}

.cache-13aqjby-Stack-MenuList:after,
.cache-13aqjby-Stack-MenuList:before {
  border: solid transparent;
  border-width: 9px;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.cache-13aqjby-Stack-MenuList:after {
  border-color: transparent;
}

.cache-13aqjby-Stack-MenuList:before {
  border-color: transparent;
}

.cache-j37q6h-Container {
  border-bottom: 1px solid #d9dadd;
  padding: 2px 4px;
}

.cache-fun4gd-StyledItem {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 32px;
  max-height: 44px;
  font-size: 14px;
  line-height: 20px;
  font-weight: inherit;
  padding: 4px 8px;
  border: none;
  cursor: pointer;
  min-width: 110px;
  width: 100%;
  border-radius: 4px;
  -webkit-transition: background-color 200ms,color 200ms;
  transition: background-color 200ms,color 200ms;
  color: #3f4250;
  background: none;
}

.cache-fun4gd-StyledItem svg {
  fill: #3f4250;
}

.cache-fun4gd-StyledItem:hover,
.cache-fun4gd-StyledItem:focus,
.cache-fun4gd-StyledItem[data-active='true'] {
  background-color: #e9eaeb;
  color: #222638;
}

.cache-fun4gd-StyledItem:hover svg,
.cache-fun4gd-StyledItem:focus svg,
.cache-fun4gd-StyledItem[data-active='true'] svg {
  fill: #222638;
}

<div
    aria-controls="menu-:r11:"
    aria-describedby="menu-:r11:"
    class="cache-1hzk1lh-StyledChildrenContainer e4h1g860"
    tabindex="-1"
  >
    <button
      aria-expanded="true"
      aria-haspopup="dialog"
      type="button"
    >
      Menu
    </button>
    <div
      class="e1jn11gg1 cache-1ffg5rq-StyledPopup-StyledPopup-StyledPopup e4h1g861"
      data-has-arrow="false"
      id="menu-:r11:"
      role="dialog"
    >
      <div
        class="cache-13aqjby-Stack-MenuList e1jn11gg0"
        role="menu"
      >
        <div
          class="cache-j37q6h-Container ei26g5y2"
        >
          <button
            class="cache-fun4gd-StyledItem ei26g5y1"
            role="menuitem"
            type="button"
          >
            right
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu placement renders top 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  0% {
    opacity: 0;
    -webkit-transform: translate3d(0px, -12px, 0);
    -moz-transform: translate3d(0px, -12px, 0);
    -ms-transform: translate3d(0px, -12px, 0);
    transform: translate3d(0px, -12px, 0);
  }

  100% {
    opacity: 1;
    -webkit-transform: translate3d(0px, -12px, 0);
    -moz-transform: translate3d(0px, -12px, 0);
    -ms-transform: translate3d(0px, -12px, 0);
    transform: translate3d(0px, -12px, 0);
  }
}

.cache-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.cache-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

.cache-1l7or7n-StyledPopup-StyledPopup-StyledPopup {
  background: #151a2d;
  color: #ffffff;
  border-radius: 4px;
  padding: 4px 8px;
  text-align: center;
  position: absolute;
  max-width: 232px;
  overflow-wrap: break-word;
  font-size: 0.8rem;
  inset: 0 auto auto 0;
  top: 0;
  left: 0;
  z-index: 1;
  -webkit-transform: translate3d(0px, -12px, 0);
  -moz-transform: translate3d(0px, -12px, 0);
  -ms-transform: translate3d(0px, -12px, 0);
  transform: translate3d(0px, -12px, 0);
  -webkit-animation: 230ms animation-0 forwards;
  animation: 230ms animation-0 forwards;
  background-color: #ffffff;
  box-shadow: 0px 0px 24px 6px #d9dadd66;
  padding: 0;
  width: 180px;
  max-width: none;
  padding: 2px 0;
}

.cache-1l7or7n-StyledPopup-StyledPopup-StyledPopup[data-has-arrow='true']::after {
  content: ' ';
  position: absolute;
  top: -1px;
  left: 0px;
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  margin-left: -8px;
  border-width: 8px;
  border-style: solid;
  border-color: #151a2d transparent transparent transparent;
  pointer-events: none;
}

.cache-1l7or7n-StyledPopup-StyledPopup-StyledPopup[data-has-arrow='true']::after {
  border-color: #ffffff transparent transparent transparent;
}

.cache-13aqjby-Stack-MenuList {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  max-height: 480px;
  overflow-y: auto;
  overflow-x: hidden;
  background-color: #ffffff;
  color: #3f4250;
  border-radius: 4px;
  position: relative;
}

.cache-13aqjby-Stack-MenuList:after,
.cache-13aqjby-Stack-MenuList:before {
  border: solid transparent;
  border-width: 9px;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.cache-13aqjby-Stack-MenuList:after {
  border-color: transparent;
}

.cache-13aqjby-Stack-MenuList:before {
  border-color: transparent;
}

.cache-j37q6h-Container {
  border-bottom: 1px solid #d9dadd;
  padding: 2px 4px;
}

.cache-fun4gd-StyledItem {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 32px;
  max-height: 44px;
  font-size: 14px;
  line-height: 20px;
  font-weight: inherit;
  padding: 4px 8px;
  border: none;
  cursor: pointer;
  min-width: 110px;
  width: 100%;
  border-radius: 4px;
  -webkit-transition: background-color 200ms,color 200ms;
  transition: background-color 200ms,color 200ms;
  color: #3f4250;
  background: none;
}

.cache-fun4gd-StyledItem svg {
  fill: #3f4250;
}

.cache-fun4gd-StyledItem:hover,
.cache-fun4gd-StyledItem:focus,
.cache-fun4gd-StyledItem[data-active='true'] {
  background-color: #e9eaeb;
  color: #222638;
}

.cache-fun4gd-StyledItem:hover svg,
.cache-fun4gd-StyledItem:focus svg,
.cache-fun4gd-StyledItem[data-active='true'] svg {
  fill: #222638;
}

<div
    aria-controls="menu-:ro:"
    aria-describedby="menu-:ro:"
    class="cache-1hzk1lh-StyledChildrenContainer e4h1g860"
    tabindex="-1"
  >
    <button
      aria-expanded="true"
      aria-haspopup="dialog"
      type="button"
    >
      Menu
    </button>
    <div
      class="e1jn11gg1 cache-1l7or7n-StyledPopup-StyledPopup-StyledPopup e4h1g861"
      data-has-arrow="false"
      id="menu-:ro:"
      role="dialog"
    >
      <div
        class="cache-13aqjby-Stack-MenuList e1jn11gg0"
        role="menu"
      >
        <div
          class="cache-j37q6h-Container ei26g5y2"
        >
          <button
            class="cache-fun4gd-StyledItem ei26g5y1"
            role="menuitem"
            type="button"
          >
            top
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu renders with Menu.Group 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  0% {
    opacity: 0;
    -webkit-transform: translate3d(0px, 12px, 0);
    -moz-transform: translate3d(0px, 12px, 0);
    -ms-transform: translate3d(0px, 12px, 0);
    transform: translate3d(0px, 12px, 0);
  }

  100% {
    opacity: 1;
    -webkit-transform: translate3d(0px, 12px, 0);
    -moz-transform: translate3d(0px, 12px, 0);
    -ms-transform: translate3d(0px, 12px, 0);
    transform: translate3d(0px, 12px, 0);
  }
}

.cache-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.cache-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

.cache-5k2du2-StyledPopup-StyledPopup-StyledPopup {
  background: #151a2d;
  color: #ffffff;
  border-radius: 4px;
  padding: 4px 8px;
  text-align: center;
  position: absolute;
  max-width: 232px;
  overflow-wrap: break-word;
  font-size: 0.8rem;
  inset: 0 auto auto 0;
  top: 0;
  left: 0;
  z-index: 1;
  -webkit-transform: translate3d(0px, 12px, 0);
  -moz-transform: translate3d(0px, 12px, 0);
  -ms-transform: translate3d(0px, 12px, 0);
  transform: translate3d(0px, 12px, 0);
  -webkit-animation: 230ms animation-0 forwards;
  animation: 230ms animation-0 forwards;
  background-color: #ffffff;
  box-shadow: 0px 0px 24px 6px #d9dadd66;
  padding: 0;
  width: 180px;
  max-width: none;
  padding: 2px 0;
}

.cache-5k2du2-StyledPopup-StyledPopup-StyledPopup[data-has-arrow='true']::after {
  content: ' ';
  position: absolute;
  top: -13px;
  left: 0px;
  -webkit-transform: rotate(180deg);
  -moz-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  margin-left: -8px;
  border-width: 8px;
  border-style: solid;
  border-color: #151a2d transparent transparent transparent;
  pointer-events: none;
}

.cache-5k2du2-StyledPopup-StyledPopup-StyledPopup[data-has-arrow='true']::after {
  border-color: #ffffff transparent transparent transparent;
}

.cache-13aqjby-Stack-MenuList {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  max-height: 480px;
  overflow-y: auto;
  overflow-x: hidden;
  background-color: #ffffff;
  color: #3f4250;
  border-radius: 4px;
  position: relative;
}

.cache-13aqjby-Stack-MenuList:after,
.cache-13aqjby-Stack-MenuList:before {
  border: solid transparent;
  border-width: 9px;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.cache-13aqjby-Stack-MenuList:after {
  border-color: transparent;
}

.cache-13aqjby-Stack-MenuList:before {
  border-color: transparent;
}

.cache-1r1rnon-Container {
  padding: 4px 12px;
  text-align: left;
}

.cache-aerbci-StyledText {
  color: #727683;
  font-size: 12px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-j37q6h-Container {
  border-bottom: 1px solid #d9dadd;
  padding: 2px 4px;
}

.cache-fun4gd-StyledItem {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 32px;
  max-height: 44px;
  font-size: 14px;
  line-height: 20px;
  font-weight: inherit;
  padding: 4px 8px;
  border: none;
  cursor: pointer;
  min-width: 110px;
  width: 100%;
  border-radius: 4px;
  -webkit-transition: background-color 200ms,color 200ms;
  transition: background-color 200ms,color 200ms;
  color: #3f4250;
  background: none;
}

.cache-fun4gd-StyledItem svg {
  fill: #3f4250;
}

.cache-fun4gd-StyledItem:hover,
.cache-fun4gd-StyledItem:focus,
.cache-fun4gd-StyledItem[data-active='true'] {
  background-color: #e9eaeb;
  color: #222638;
}

.cache-fun4gd-StyledItem:hover svg,
.cache-fun4gd-StyledItem:focus svg,
.cache-fun4gd-StyledItem[data-active='true'] svg {
  fill: #222638;
}

<div
    aria-controls="menu-:r7:"
    aria-describedby="menu-:r7:"
    class="cache-1hzk1lh-StyledChildrenContainer e4h1g860"
    tabindex="-1"
  >
    <button
      aria-expanded="true"
      aria-haspopup="dialog"
      type="button"
    >
      Menu
    </button>
    <div
      class="e1jn11gg1 cache-5k2du2-StyledPopup-StyledPopup-StyledPopup e4h1g861"
      data-has-arrow="false"
      id="menu-:r7:"
      role="dialog"
    >
      <div
        class="cache-13aqjby-Stack-MenuList e1jn11gg0"
        role="menu"
      >
        <span
          class="cache-1r1rnon-Container e7u2rl20"
        >
          <span
            class="cache-aerbci-StyledText e13y3mga0"
          >
            Group
          </span>
        </span>
        <div
          class="cache-j37q6h-Container ei26g5y2"
        >
          <button
            class="cache-fun4gd-StyledItem ei26g5y1"
            role="menuitem"
            type="button"
          >
            Menu.Item
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu renders with Menu.Item 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  0% {
    opacity: 0;
    -webkit-transform: translate3d(0px, 12px, 0);
    -moz-transform: translate3d(0px, 12px, 0);
    -ms-transform: translate3d(0px, 12px, 0);
    transform: translate3d(0px, 12px, 0);
  }

  100% {
    opacity: 1;
    -webkit-transform: translate3d(0px, 12px, 0);
    -moz-transform: translate3d(0px, 12px, 0);
    -ms-transform: translate3d(0px, 12px, 0);
    transform: translate3d(0px, 12px, 0);
  }
}

.cache-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.cache-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

.cache-5k2du2-StyledPopup-StyledPopup-StyledPopup {
  background: #151a2d;
  color: #ffffff;
  border-radius: 4px;
  padding: 4px 8px;
  text-align: center;
  position: absolute;
  max-width: 232px;
  overflow-wrap: break-word;
  font-size: 0.8rem;
  inset: 0 auto auto 0;
  top: 0;
  left: 0;
  z-index: 1;
  -webkit-transform: translate3d(0px, 12px, 0);
  -moz-transform: translate3d(0px, 12px, 0);
  -ms-transform: translate3d(0px, 12px, 0);
  transform: translate3d(0px, 12px, 0);
  -webkit-animation: 230ms animation-0 forwards;
  animation: 230ms animation-0 forwards;
  background-color: #ffffff;
  box-shadow: 0px 0px 24px 6px #d9dadd66;
  padding: 0;
  width: 180px;
  max-width: none;
  padding: 2px 0;
}

.cache-5k2du2-StyledPopup-StyledPopup-StyledPopup[data-has-arrow='true']::after {
  content: ' ';
  position: absolute;
  top: -13px;
  left: 0px;
  -webkit-transform: rotate(180deg);
  -moz-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  margin-left: -8px;
  border-width: 8px;
  border-style: solid;
  border-color: #151a2d transparent transparent transparent;
  pointer-events: none;
}

.cache-5k2du2-StyledPopup-StyledPopup-StyledPopup[data-has-arrow='true']::after {
  border-color: #ffffff transparent transparent transparent;
}

.cache-13aqjby-Stack-MenuList {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  max-height: 480px;
  overflow-y: auto;
  overflow-x: hidden;
  background-color: #ffffff;
  color: #3f4250;
  border-radius: 4px;
  position: relative;
}

.cache-13aqjby-Stack-MenuList:after,
.cache-13aqjby-Stack-MenuList:before {
  border: solid transparent;
  border-width: 9px;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.cache-13aqjby-Stack-MenuList:after {
  border-color: transparent;
}

.cache-13aqjby-Stack-MenuList:before {
  border-color: transparent;
}

.cache-j37q6h-Container {
  border-bottom: 1px solid #d9dadd;
  padding: 2px 4px;
}

.cache-fun4gd-StyledItem {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 32px;
  max-height: 44px;
  font-size: 14px;
  line-height: 20px;
  font-weight: inherit;
  padding: 4px 8px;
  border: none;
  cursor: pointer;
  min-width: 110px;
  width: 100%;
  border-radius: 4px;
  -webkit-transition: background-color 200ms,color 200ms;
  transition: background-color 200ms,color 200ms;
  color: #3f4250;
  background: none;
}

.cache-fun4gd-StyledItem svg {
  fill: #3f4250;
}

.cache-fun4gd-StyledItem:hover,
.cache-fun4gd-StyledItem:focus,
.cache-fun4gd-StyledItem[data-active='true'] {
  background-color: #e9eaeb;
  color: #222638;
}

.cache-fun4gd-StyledItem:hover svg,
.cache-fun4gd-StyledItem:focus svg,
.cache-fun4gd-StyledItem[data-active='true'] svg {
  fill: #222638;
}

<div
    aria-controls="menu-:r4:"
    aria-describedby="menu-:r4:"
    class="cache-1hzk1lh-StyledChildrenContainer e4h1g860"
    tabindex="-1"
  >
    <button
      aria-expanded="true"
      aria-haspopup="dialog"
      type="button"
    >
      Menu
    </button>
    <div
      class="e1jn11gg1 cache-5k2du2-StyledPopup-StyledPopup-StyledPopup e4h1g861"
      data-has-arrow="false"
      id="menu-:r4:"
      role="dialog"
    >
      <div
        class="cache-13aqjby-Stack-MenuList e1jn11gg0"
        role="menu"
      >
        <div
          class="cache-j37q6h-Container ei26g5y2"
        >
          <button
            class="cache-fun4gd-StyledItem ei26g5y1"
            role="menuitem"
            type="button"
          >
            Menu.Item
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu renders with Menu.ItemLink & Menu.Item disabled 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  0% {
    opacity: 0;
    -webkit-transform: translate3d(0px, 12px, 0);
    -moz-transform: translate3d(0px, 12px, 0);
    -ms-transform: translate3d(0px, 12px, 0);
    transform: translate3d(0px, 12px, 0);
  }

  100% {
    opacity: 1;
    -webkit-transform: translate3d(0px, 12px, 0);
    -moz-transform: translate3d(0px, 12px, 0);
    -ms-transform: translate3d(0px, 12px, 0);
    transform: translate3d(0px, 12px, 0);
  }
}

.cache-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.cache-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

.cache-5k2du2-StyledPopup-StyledPopup-StyledPopup {
  background: #151a2d;
  color: #ffffff;
  border-radius: 4px;
  padding: 4px 8px;
  text-align: center;
  position: absolute;
  max-width: 232px;
  overflow-wrap: break-word;
  font-size: 0.8rem;
  inset: 0 auto auto 0;
  top: 0;
  left: 0;
  z-index: 1;
  -webkit-transform: translate3d(0px, 12px, 0);
  -moz-transform: translate3d(0px, 12px, 0);
  -ms-transform: translate3d(0px, 12px, 0);
  transform: translate3d(0px, 12px, 0);
  -webkit-animation: 230ms animation-0 forwards;
  animation: 230ms animation-0 forwards;
  background-color: #ffffff;
  box-shadow: 0px 0px 24px 6px #d9dadd66;
  padding: 0;
  width: 180px;
  max-width: none;
  padding: 2px 0;
}

.cache-5k2du2-StyledPopup-StyledPopup-StyledPopup[data-has-arrow='true']::after {
  content: ' ';
  position: absolute;
  top: -13px;
  left: 0px;
  -webkit-transform: rotate(180deg);
  -moz-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  margin-left: -8px;
  border-width: 8px;
  border-style: solid;
  border-color: #151a2d transparent transparent transparent;
  pointer-events: none;
}

.cache-5k2du2-StyledPopup-StyledPopup-StyledPopup[data-has-arrow='true']::after {
  border-color: #ffffff transparent transparent transparent;
}

.cache-13aqjby-Stack-MenuList {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  max-height: 480px;
  overflow-y: auto;
  overflow-x: hidden;
  background-color: #ffffff;
  color: #3f4250;
  border-radius: 4px;
  position: relative;
}

.cache-13aqjby-Stack-MenuList:after,
.cache-13aqjby-Stack-MenuList:before {
  border: solid transparent;
  border-width: 9px;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.cache-13aqjby-Stack-MenuList:after {
  border-color: transparent;
}

.cache-13aqjby-Stack-MenuList:before {
  border-color: transparent;
}

.cache-j37q6h-Container {
  border-bottom: 1px solid #d9dadd;
  padding: 2px 4px;
}

.cache-5e0w5r-StyledItem {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 32px;
  max-height: 44px;
  font-size: 14px;
  line-height: 20px;
  font-weight: inherit;
  padding: 4px 8px;
  border: none;
  cursor: pointer;
  min-width: 110px;
  width: 100%;
  border-radius: 4px;
  -webkit-transition: background-color 200ms,color 200ms;
  transition: background-color 200ms,color 200ms;
  color: #b5b7bd;
  cursor: not-allowed;
  background: none;
}

.cache-5e0w5r-StyledItem svg {
  fill: #b5b7bd;
}

<div
    aria-controls="menu-:re:"
    aria-describedby="menu-:re:"
    class="cache-1hzk1lh-StyledChildrenContainer e4h1g860"
    tabindex="-1"
  >
    <button
      aria-expanded="true"
      aria-haspopup="dialog"
      type="button"
    >
      Menu
    </button>
    <div
      class="e1jn11gg1 cache-5k2du2-StyledPopup-StyledPopup-StyledPopup e4h1g861"
      data-has-arrow="false"
      id="menu-:re:"
      role="dialog"
    >
      <div
        class="cache-13aqjby-Stack-MenuList e1jn11gg0"
        role="menu"
      >
        <div
          class="cache-j37q6h-Container ei26g5y2"
        >
          <button
            class="cache-5e0w5r-StyledItem ei26g5y1"
            disabled=""
            role="menuitem"
            type="button"
          >
            Menu.Item disabled
          </button>
        </div>
        <div
          class="cache-j37q6h-Container ei26g5y2"
        >
          <button
            class="cache-5e0w5r-StyledItem ei26g5y1"
            disabled=""
            role="menuitem"
            type="button"
          >
            Menu.Item Link disabled
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu renders with Menu.ItemLink 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  0% {
    opacity: 0;
    -webkit-transform: translate3d(0px, 12px, 0);
    -moz-transform: translate3d(0px, 12px, 0);
    -ms-transform: translate3d(0px, 12px, 0);
    transform: translate3d(0px, 12px, 0);
  }

  100% {
    opacity: 1;
    -webkit-transform: translate3d(0px, 12px, 0);
    -moz-transform: translate3d(0px, 12px, 0);
    -ms-transform: translate3d(0px, 12px, 0);
    transform: translate3d(0px, 12px, 0);
  }
}

.cache-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.cache-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

.cache-5k2du2-StyledPopup-StyledPopup-StyledPopup {
  background: #151a2d;
  color: #ffffff;
  border-radius: 4px;
  padding: 4px 8px;
  text-align: center;
  position: absolute;
  max-width: 232px;
  overflow-wrap: break-word;
  font-size: 0.8rem;
  inset: 0 auto auto 0;
  top: 0;
  left: 0;
  z-index: 1;
  -webkit-transform: translate3d(0px, 12px, 0);
  -moz-transform: translate3d(0px, 12px, 0);
  -ms-transform: translate3d(0px, 12px, 0);
  transform: translate3d(0px, 12px, 0);
  -webkit-animation: 230ms animation-0 forwards;
  animation: 230ms animation-0 forwards;
  background-color: #ffffff;
  box-shadow: 0px 0px 24px 6px #d9dadd66;
  padding: 0;
  width: 180px;
  max-width: none;
  padding: 2px 0;
}

.cache-5k2du2-StyledPopup-StyledPopup-StyledPopup[data-has-arrow='true']::after {
  content: ' ';
  position: absolute;
  top: -13px;
  left: 0px;
  -webkit-transform: rotate(180deg);
  -moz-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  margin-left: -8px;
  border-width: 8px;
  border-style: solid;
  border-color: #151a2d transparent transparent transparent;
  pointer-events: none;
}

.cache-5k2du2-StyledPopup-StyledPopup-StyledPopup[data-has-arrow='true']::after {
  border-color: #ffffff transparent transparent transparent;
}

.cache-13aqjby-Stack-MenuList {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  max-height: 480px;
  overflow-y: auto;
  overflow-x: hidden;
  background-color: #ffffff;
  color: #3f4250;
  border-radius: 4px;
  position: relative;
}

.cache-13aqjby-Stack-MenuList:after,
.cache-13aqjby-Stack-MenuList:before {
  border: solid transparent;
  border-width: 9px;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.cache-13aqjby-Stack-MenuList:after {
  border-color: transparent;
}

.cache-13aqjby-Stack-MenuList:before {
  border-color: transparent;
}

.cache-j37q6h-Container {
  border-bottom: 1px solid #d9dadd;
  padding: 2px 4px;
}

.cache-rk3ill-StyledLinkItem {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 32px;
  max-height: 44px;
  font-size: 14px;
  line-height: 20px;
  font-weight: inherit;
  padding: 4px 8px;
  border: none;
  cursor: pointer;
  min-width: 110px;
  width: 100%;
  border-radius: 4px;
  -webkit-transition: background-color 200ms,color 200ms;
  transition: background-color 200ms,color 200ms;
  color: #3f4250;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-rk3ill-StyledLinkItem svg {
  fill: #3f4250;
}

.cache-rk3ill-StyledLinkItem:hover,
.cache-rk3ill-StyledLinkItem:focus,
.cache-rk3ill-StyledLinkItem[data-active='true'] {
  background-color: #e9eaeb;
  color: #222638;
}

.cache-rk3ill-StyledLinkItem:hover svg,
.cache-rk3ill-StyledLinkItem:focus svg,
.cache-rk3ill-StyledLinkItem[data-active='true'] svg {
  fill: #222638;
}

.cache-rk3ill-StyledLinkItem:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    aria-controls="menu-:rb:"
    aria-describedby="menu-:rb:"
    class="cache-1hzk1lh-StyledChildrenContainer e4h1g860"
    tabindex="-1"
  >
    <button
      aria-expanded="true"
      aria-haspopup="dialog"
      type="button"
    >
      Menu
    </button>
    <div
      class="e1jn11gg1 cache-5k2du2-StyledPopup-StyledPopup-StyledPopup e4h1g861"
      data-has-arrow="false"
      id="menu-:rb:"
      role="dialog"
    >
      <div
        class="cache-13aqjby-Stack-MenuList e1jn11gg0"
        role="menu"
      >
        <div
          class="cache-j37q6h-Container ei26g5y2"
        >
          <a
            class="cache-rk3ill-StyledLinkItem ei26g5y0"
            href="/link"
            role="menuitem"
          >
            Menu.Item as Link
          </a>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu renders with disclosure not a function 1`] = `
<DocumentFragment>
  .cache-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.cache-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

<div
    aria-controls="menu-:r0:"
    aria-describedby="menu-:r0:"
    class="cache-1hzk1lh-StyledChildrenContainer e4h1g860"
    tabindex="-1"
  >
    <button
      aria-expanded="false"
      aria-haspopup="dialog"
      type="button"
    >
      Menu is visible
    </button>
  </div>
</DocumentFragment>
`;

exports[`Menu renders with visible=false 1`] = `
<DocumentFragment>
  .cache-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.cache-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

<div
    aria-controls="menu-:r2:"
    aria-describedby="menu-:r2:"
    class="cache-1hzk1lh-StyledChildrenContainer e4h1g860"
    tabindex="-1"
  >
    <button
      aria-expanded="false"
      aria-haspopup="dialog"
      type="button"
    >
      Menu is visible
    </button>
  </div>
</DocumentFragment>
`;

exports[`Menu sizes renders large 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  0% {
    opacity: 0;
    -webkit-transform: translate3d(0px, 12px, 0);
    -moz-transform: translate3d(0px, 12px, 0);
    -ms-transform: translate3d(0px, 12px, 0);
    transform: translate3d(0px, 12px, 0);
  }

  100% {
    opacity: 1;
    -webkit-transform: translate3d(0px, 12px, 0);
    -moz-transform: translate3d(0px, 12px, 0);
    -ms-transform: translate3d(0px, 12px, 0);
    transform: translate3d(0px, 12px, 0);
  }
}

@keyframes animation-0 {
  0% {
    opacity: 0;
    -webkit-transform: translate3d(0px, 12px, 0);
    -moz-transform: translate3d(0px, 12px, 0);
    -ms-transform: translate3d(0px, 12px, 0);
    transform: translate3d(0px, 12px, 0);
  }

  100% {
    opacity: 1;
    -webkit-transform: translate3d(0px, 12px, 0);
    -moz-transform: translate3d(0px, 12px, 0);
    -ms-transform: translate3d(0px, 12px, 0);
    transform: translate3d(0px, 12px, 0);
  }
}

@keyframes animation-0 {
  0% {
    opacity: 0;
    -webkit-transform: translate3d(0px, 12px, 0);
    -moz-transform: translate3d(0px, 12px, 0);
    -ms-transform: translate3d(0px, 12px, 0);
    transform: translate3d(0px, 12px, 0);
  }

  100% {
    opacity: 1;
    -webkit-transform: translate3d(0px, 12px, 0);
    -moz-transform: translate3d(0px, 12px, 0);
    -ms-transform: translate3d(0px, 12px, 0);
    transform: translate3d(0px, 12px, 0);
  }
}

.cache-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.cache-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

.cache-1rytjle-StyledPopup-StyledPopup-StyledPopup {
  background: #151a2d;
  color: #ffffff;
  border-radius: 4px;
  padding: 4px 8px;
  text-align: center;
  position: absolute;
  max-width: 232px;
  overflow-wrap: break-word;
  font-size: 0.8rem;
  inset: 0 auto auto 0;
  top: 0;
  left: 0;
  z-index: 1;
  -webkit-transform: translate3d(0px, 12px, 0);
  -moz-transform: translate3d(0px, 12px, 0);
  -ms-transform: translate3d(0px, 12px, 0);
  transform: translate3d(0px, 12px, 0);
  -webkit-animation: 230ms animation-0 forwards;
  animation: 230ms animation-0 forwards;
  background-color: #ffffff;
  box-shadow: 0px 0px 24px 6px #d9dadd66;
  padding: 0;
  width: 380px;
  max-width: none;
  padding: 2px 0;
}

.cache-1rytjle-StyledPopup-StyledPopup-StyledPopup[data-has-arrow='true']::after {
  content: ' ';
  position: absolute;
  top: -13px;
  left: 0px;
  -webkit-transform: rotate(180deg);
  -moz-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  margin-left: -8px;
  border-width: 8px;
  border-style: solid;
  border-color: #151a2d transparent transparent transparent;
  pointer-events: none;
}

.cache-1rytjle-StyledPopup-StyledPopup-StyledPopup[data-has-arrow='true']::after {
  border-color: #ffffff transparent transparent transparent;
}

.cache-13aqjby-Stack-MenuList {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  max-height: 480px;
  overflow-y: auto;
  overflow-x: hidden;
  background-color: #ffffff;
  color: #3f4250;
  border-radius: 4px;
  position: relative;
}

.cache-13aqjby-Stack-MenuList:after,
.cache-13aqjby-Stack-MenuList:before {
  border: solid transparent;
  border-width: 9px;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.cache-13aqjby-Stack-MenuList:after {
  border-color: transparent;
}

.cache-13aqjby-Stack-MenuList:before {
  border-color: transparent;
}

.cache-j37q6h-Container {
  border-bottom: 1px solid #d9dadd;
  padding: 2px 4px;
}

.cache-fun4gd-StyledItem {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 32px;
  max-height: 44px;
  font-size: 14px;
  line-height: 20px;
  font-weight: inherit;
  padding: 4px 8px;
  border: none;
  cursor: pointer;
  min-width: 110px;
  width: 100%;
  border-radius: 4px;
  -webkit-transition: background-color 200ms,color 200ms;
  transition: background-color 200ms,color 200ms;
  color: #3f4250;
  background: none;
}

.cache-fun4gd-StyledItem svg {
  fill: #3f4250;
}

.cache-fun4gd-StyledItem:hover,
.cache-fun4gd-StyledItem:focus,
.cache-fun4gd-StyledItem[data-active='true'] {
  background-color: #e9eaeb;
  color: #222638;
}

.cache-fun4gd-StyledItem:hover svg,
.cache-fun4gd-StyledItem:focus svg,
.cache-fun4gd-StyledItem[data-active='true'] svg {
  fill: #222638;
}

<div
    aria-controls="menu-:r1a:"
    aria-describedby="menu-:r1a:"
    class="cache-1hzk1lh-StyledChildrenContainer e4h1g860"
    tabindex="-1"
  >
    <button
      aria-expanded="true"
      aria-haspopup="dialog"
      type="button"
    >
      Menu
    </button>
    <div
      class="e1jn11gg1 cache-1rytjle-StyledPopup-StyledPopup-StyledPopup e4h1g861"
      data-has-arrow="false"
      id="menu-:r1a:"
      role="dialog"
    >
      <div
        class="cache-13aqjby-Stack-MenuList e1jn11gg0"
        role="menu"
      >
        <div
          class="cache-j37q6h-Container ei26g5y2"
        >
          <button
            class="cache-fun4gd-StyledItem ei26g5y1"
            role="menuitem"
            type="button"
          >
            large
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu sizes renders medium 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  0% {
    opacity: 0;
    -webkit-transform: translate3d(0px, 12px, 0);
    -moz-transform: translate3d(0px, 12px, 0);
    -ms-transform: translate3d(0px, 12px, 0);
    transform: translate3d(0px, 12px, 0);
  }

  100% {
    opacity: 1;
    -webkit-transform: translate3d(0px, 12px, 0);
    -moz-transform: translate3d(0px, 12px, 0);
    -ms-transform: translate3d(0px, 12px, 0);
    transform: translate3d(0px, 12px, 0);
  }
}

@keyframes animation-0 {
  0% {
    opacity: 0;
    -webkit-transform: translate3d(0px, 12px, 0);
    -moz-transform: translate3d(0px, 12px, 0);
    -ms-transform: translate3d(0px, 12px, 0);
    transform: translate3d(0px, 12px, 0);
  }

  100% {
    opacity: 1;
    -webkit-transform: translate3d(0px, 12px, 0);
    -moz-transform: translate3d(0px, 12px, 0);
    -ms-transform: translate3d(0px, 12px, 0);
    transform: translate3d(0px, 12px, 0);
  }
}

.cache-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.cache-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

.cache-fxlpoe-StyledPopup-StyledPopup-StyledPopup {
  background: #151a2d;
  color: #ffffff;
  border-radius: 4px;
  padding: 4px 8px;
  text-align: center;
  position: absolute;
  max-width: 232px;
  overflow-wrap: break-word;
  font-size: 0.8rem;
  inset: 0 auto auto 0;
  top: 0;
  left: 0;
  z-index: 1;
  -webkit-transform: translate3d(0px, 12px, 0);
  -moz-transform: translate3d(0px, 12px, 0);
  -ms-transform: translate3d(0px, 12px, 0);
  transform: translate3d(0px, 12px, 0);
  -webkit-animation: 230ms animation-0 forwards;
  animation: 230ms animation-0 forwards;
  background-color: #ffffff;
  box-shadow: 0px 0px 24px 6px #d9dadd66;
  padding: 0;
  width: 280px;
  max-width: none;
  padding: 2px 0;
}

.cache-fxlpoe-StyledPopup-StyledPopup-StyledPopup[data-has-arrow='true']::after {
  content: ' ';
  position: absolute;
  top: -13px;
  left: 0px;
  -webkit-transform: rotate(180deg);
  -moz-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  margin-left: -8px;
  border-width: 8px;
  border-style: solid;
  border-color: #151a2d transparent transparent transparent;
  pointer-events: none;
}

.cache-fxlpoe-StyledPopup-StyledPopup-StyledPopup[data-has-arrow='true']::after {
  border-color: #ffffff transparent transparent transparent;
}

.cache-13aqjby-Stack-MenuList {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  max-height: 480px;
  overflow-y: auto;
  overflow-x: hidden;
  background-color: #ffffff;
  color: #3f4250;
  border-radius: 4px;
  position: relative;
}

.cache-13aqjby-Stack-MenuList:after,
.cache-13aqjby-Stack-MenuList:before {
  border: solid transparent;
  border-width: 9px;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.cache-13aqjby-Stack-MenuList:after {
  border-color: transparent;
}

.cache-13aqjby-Stack-MenuList:before {
  border-color: transparent;
}

.cache-j37q6h-Container {
  border-bottom: 1px solid #d9dadd;
  padding: 2px 4px;
}

.cache-fun4gd-StyledItem {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 32px;
  max-height: 44px;
  font-size: 14px;
  line-height: 20px;
  font-weight: inherit;
  padding: 4px 8px;
  border: none;
  cursor: pointer;
  min-width: 110px;
  width: 100%;
  border-radius: 4px;
  -webkit-transition: background-color 200ms,color 200ms;
  transition: background-color 200ms,color 200ms;
  color: #3f4250;
  background: none;
}

.cache-fun4gd-StyledItem svg {
  fill: #3f4250;
}

.cache-fun4gd-StyledItem:hover,
.cache-fun4gd-StyledItem:focus,
.cache-fun4gd-StyledItem[data-active='true'] {
  background-color: #e9eaeb;
  color: #222638;
}

.cache-fun4gd-StyledItem:hover svg,
.cache-fun4gd-StyledItem:focus svg,
.cache-fun4gd-StyledItem[data-active='true'] svg {
  fill: #222638;
}

<div
    aria-controls="menu-:r17:"
    aria-describedby="menu-:r17:"
    class="cache-1hzk1lh-StyledChildrenContainer e4h1g860"
    tabindex="-1"
  >
    <button
      aria-expanded="true"
      aria-haspopup="dialog"
      type="button"
    >
      Menu
    </button>
    <div
      class="e1jn11gg1 cache-fxlpoe-StyledPopup-StyledPopup-StyledPopup e4h1g861"
      data-has-arrow="false"
      id="menu-:r17:"
      role="dialog"
    >
      <div
        class="cache-13aqjby-Stack-MenuList e1jn11gg0"
        role="menu"
      >
        <div
          class="cache-j37q6h-Container ei26g5y2"
        >
          <button
            class="cache-fun4gd-StyledItem ei26g5y1"
            role="menuitem"
            type="button"
          >
            medium
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu sizes renders small 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  0% {
    opacity: 0;
    -webkit-transform: translate3d(0px, 12px, 0);
    -moz-transform: translate3d(0px, 12px, 0);
    -ms-transform: translate3d(0px, 12px, 0);
    transform: translate3d(0px, 12px, 0);
  }

  100% {
    opacity: 1;
    -webkit-transform: translate3d(0px, 12px, 0);
    -moz-transform: translate3d(0px, 12px, 0);
    -ms-transform: translate3d(0px, 12px, 0);
    transform: translate3d(0px, 12px, 0);
  }
}

.cache-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.cache-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

.cache-5k2du2-StyledPopup-StyledPopup-StyledPopup {
  background: #151a2d;
  color: #ffffff;
  border-radius: 4px;
  padding: 4px 8px;
  text-align: center;
  position: absolute;
  max-width: 232px;
  overflow-wrap: break-word;
  font-size: 0.8rem;
  inset: 0 auto auto 0;
  top: 0;
  left: 0;
  z-index: 1;
  -webkit-transform: translate3d(0px, 12px, 0);
  -moz-transform: translate3d(0px, 12px, 0);
  -ms-transform: translate3d(0px, 12px, 0);
  transform: translate3d(0px, 12px, 0);
  -webkit-animation: 230ms animation-0 forwards;
  animation: 230ms animation-0 forwards;
  background-color: #ffffff;
  box-shadow: 0px 0px 24px 6px #d9dadd66;
  padding: 0;
  width: 180px;
  max-width: none;
  padding: 2px 0;
}

.cache-5k2du2-StyledPopup-StyledPopup-StyledPopup[data-has-arrow='true']::after {
  content: ' ';
  position: absolute;
  top: -13px;
  left: 0px;
  -webkit-transform: rotate(180deg);
  -moz-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  margin-left: -8px;
  border-width: 8px;
  border-style: solid;
  border-color: #151a2d transparent transparent transparent;
  pointer-events: none;
}

.cache-5k2du2-StyledPopup-StyledPopup-StyledPopup[data-has-arrow='true']::after {
  border-color: #ffffff transparent transparent transparent;
}

.cache-13aqjby-Stack-MenuList {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  max-height: 480px;
  overflow-y: auto;
  overflow-x: hidden;
  background-color: #ffffff;
  color: #3f4250;
  border-radius: 4px;
  position: relative;
}

.cache-13aqjby-Stack-MenuList:after,
.cache-13aqjby-Stack-MenuList:before {
  border: solid transparent;
  border-width: 9px;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.cache-13aqjby-Stack-MenuList:after {
  border-color: transparent;
}

.cache-13aqjby-Stack-MenuList:before {
  border-color: transparent;
}

.cache-j37q6h-Container {
  border-bottom: 1px solid #d9dadd;
  padding: 2px 4px;
}

.cache-fun4gd-StyledItem {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 32px;
  max-height: 44px;
  font-size: 14px;
  line-height: 20px;
  font-weight: inherit;
  padding: 4px 8px;
  border: none;
  cursor: pointer;
  min-width: 110px;
  width: 100%;
  border-radius: 4px;
  -webkit-transition: background-color 200ms,color 200ms;
  transition: background-color 200ms,color 200ms;
  color: #3f4250;
  background: none;
}

.cache-fun4gd-StyledItem svg {
  fill: #3f4250;
}

.cache-fun4gd-StyledItem:hover,
.cache-fun4gd-StyledItem:focus,
.cache-fun4gd-StyledItem[data-active='true'] {
  background-color: #e9eaeb;
  color: #222638;
}

.cache-fun4gd-StyledItem:hover svg,
.cache-fun4gd-StyledItem:focus svg,
.cache-fun4gd-StyledItem[data-active='true'] svg {
  fill: #222638;
}

<div
    aria-controls="menu-:r14:"
    aria-describedby="menu-:r14:"
    class="cache-1hzk1lh-StyledChildrenContainer e4h1g860"
    tabindex="-1"
  >
    <button
      aria-expanded="true"
      aria-haspopup="dialog"
      type="button"
    >
      Menu
    </button>
    <div
      class="e1jn11gg1 cache-5k2du2-StyledPopup-StyledPopup-StyledPopup e4h1g861"
      data-has-arrow="false"
      id="menu-:r14:"
      role="dialog"
    >
      <div
        class="cache-13aqjby-Stack-MenuList e1jn11gg0"
        role="menu"
      >
        <div
          class="cache-j37q6h-Container ei26g5y2"
        >
          <button
            class="cache-fun4gd-StyledItem ei26g5y1"
            role="menuitem"
            type="button"
          >
            small
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
